--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=f2e04993ae17f5fcbd77",
+    "/css/app.css": "/css/app.css?id=cac0d853f48521239e24"
 }
